--- a/h8dsft_ngc_python_syntax_and_variable.ipynb
+++ b/h8dsft_ngc_python_syntax_and_variable.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "12"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,16 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data =  [1,4,9,16,25,36,49,64,81,100]"
+    "data = [1,4,9,16,25,36,49,64,81,100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "16"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "[36, 49, 64, 81]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -149,14 +149,14 @@
        "[100, 81, 64, 49, 36, 25, 16, 9, 4, 1]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# [100,81,64,36,25,16,9,4,1]\n",
-    "data[-1:-11:-1]"
+    "data[::-1]"
    ]
   },
   {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "dict_keys(['Nanggroe Aceh Darussalam', 'Sumatera Selatan', 'Kalimantan Barat', 'Jawa Timur', 'Sulawesi Selatan', 'Maluku'])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        " 'Maluku': 'Ambon'}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
