hapus image folder

--- a/h8dsft_ngc_python_syntax_and_variable.ipynb
+++ b/h8dsft_ngc_python_syntax_and_variable.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "1.Get a grip about python basic syntax.\n",
     "2.Able to utilize python variable.\n",
-    "3.Able to implement python data type utilization.3"
+    "3.Able to implement python data type utilization"
    ]
   },
   {
